Replace compact view with bootstrap tabs Hide all filter options in a shared collapse Add beta remark background Add new locale values to migrate script Add some minor css changes Fix issue causing the filter not be toggled

--- a/design/scss/choosable.scss
+++ b/design/scss/choosable.scss
@@ -38,12 +38,3 @@
 .bi-flag-fill {
     color: darkred;
 }
-
-.ku-result-list {
-    scroll-snap-type: y mandatory;
-    overflow: hidden !important;
-}
-.ku-result-item {
-    scroll-snap-align: start;
-    height: 100%;
-}
